--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         </div>
         <input type="text" class="search search-box" placeholder=" Search for your preffered city...">
+        <button>search</button>
 
         <div class="location">
 
@@ -33,8 +34,9 @@
         
         <div class="time-box">
             <div class="city">
-                <h2>Athens</h2>
+                Athens
             </div>
+           
               <div class="date-time">
                 <h1>09:03</h1>
                 <p>Thursday, 31 Aug</p>
@@ -60,12 +62,12 @@
             <div class="container">
                 <div>
                     <img src="Images/humidity.png" alt="">
-                    <p class="details">41%</p>
+                    <p class="details humidity">41%</p>
                     <p class="text">Humidity</p>
                 </div>
                 <div>
                     <img src="Images/wind.png" alt="">
-                    <p class="details">2km/h</p>
+                    <p class="details wind">2km/h</p>
                     <p class="text">Wind Speed</p>
                 </div>
                 <div>
